# fuzzycoco

./: .gitignore  CHANGELOG.md  CMakeLists.txt  DEV.md  INSTALL.md  Makefile  PARAMS.md  README.md  TODO.md  USAGE.md  codecov.yml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: c-cpp.yml  unit_tests.yml
Release/: CMakeLists.txt  Makefile
src/: CMakeLists.txt  Makefile  PR_influence_notes.md  bitarray.cpp  bitarray.h  coevolution_engine.cpp  coevolution_engine.h  coevolution_fitness.cpp  coevolution_fitness.h  crossover_method.cpp  crossover_method.h  dataframe.cpp  dataframe.h  digest.h  discretizer.h  evolution_engine.cpp  evolution_engine.h  evolution_params.h  file_utils.cpp  file_utils.h  fuzzy_coco.cpp  fuzzy_coco.h  fuzzy_coco_codec.cpp  fuzzy_coco_codec.h  fuzzy_coco_engine.cpp  fuzzy_coco_engine.h  fuzzy_coco_fitness.cpp  fuzzy_coco_fitness.h  fuzzy_coco_params.cpp  fuzzy_coco_params.h  fuzzy_default_rule.cpp  fuzzy_default_rule.h  fuzzy_operator.h  fuzzy_rule.cpp  fuzzy_rule.h  fuzzy_set.h  fuzzy_system.cpp  fuzzy_system.h  fuzzy_system_fitness.cpp  fuzzy_system_fitness.h  (+23 more)
src/exec/: fuzzy_coco_executable2.cpp
tests/e2e/: Makefile  shared.mk
tests/e2e/expression/: Makefile  README.md  expression.csv  expression_21_reporters.csv  params.json  script.fs  script_with_feature_importance.fs
tests/e2e/expression/results/seed.123/: evaluation.ffs  evaluation.json  fuzzy_system.json  prediction.csv  prediction.ffs
tests/e2e/expression/results/seed.123/fuzzySystems/: expression21_Gen300_Pop350_Rules5_NbVar3.ffs
tests/e2e/iris36/: Makefile  bug.json  iris36.csv  iris36.fs  params.json
tests/e2e/iris36/results/seed.123/: evaluation.json  fuzzy_system.json  prediction.csv
tests/e2e/iris36/results/seed.345/: fuzzy_system.json
tests/unit/: CMakeLists.txt  bitarray_test.cpp  coevolution_engine_test.cpp  crossover_method_test.cpp  dataframe_test.cpp  digest_test.cpp  discretizer_test.cpp  evolution_engine_test.cpp  file_utils_test.cpp  fuzzy_coco_codec_test.cpp  fuzzy_coco_engine_test.cpp  fuzzy_coco_features_weights_test.cpp  fuzzy_coco_fitness_test.cpp  fuzzy_coco_params_test.cpp  fuzzy_coco_test.cpp  fuzzy_default_rules_test.cpp  fuzzy_rules_test.cpp  fuzzy_set_test.cpp  fuzzy_system_fitness_test.cpp  fuzzy_system_metrics_test.cpp  fuzzy_system_test.cpp  fuzzy_variable_test.cpp  genome_codec_test.cpp  logging_logger_test.cpp  mutation_method_test.cpp  named_list_test.cpp  random_generator_test.cpp  selection_method_test.cpp  string_utils_test.cpp  tests.h  types_test.cpp
